Fix game canvas container being too high in portrait mode

--- a/site/main.css
+++ b/site/main.css
@@ -6,7 +6,8 @@ html, body {
 
 #game-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
     height: 100vh;
     touch-action: manipulation;
     justify-content: center;
